fix login scrollbar issue

--- a/src/components/Login/LoginModal.scss
+++ b/src/components/Login/LoginModal.scss
@@ -1,7 +1,7 @@
 .loginModal {
   width: 400px;
-  padding: 2rem;
-  min-height: 510px;
+  padding: 1rem 2rem;
+  min-height: 500px;
 }
 .title {
   margin: 0;
